# numerical_scientific_computing

./: README.md  git_log.txt  hybrid_profile.prof  lecture7_results.json  lecture_3qa.md  main.py  mandelbrot.py  mandelbrot.py.lprof  mandelbrot_viz.py  mandelprot_lecture_10.py  mandelprot_lecture_4.py  mandelprot_lecture_5.py  mandelprot_lecture_6.py  mandelprot_lecture_7.py  mandelprot_lecture_8.py  mandelprot_lecture_9.py  mini1.ipynb  mini2.ipynb  mini3.ipynb  naive_profile.prof  numpy_profile.prof  performance_tracker.csv  profiling_results.md  pyproject.toml  requirements.txt  test_mandelbrot.py
