[project]
name = "numerical-scientific-computing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask[distributed]>=2026.3.0",
    "ipykernel>=7.2.0",
    "line-profiler>=5.0.2",
    "matplotlib>=3.10.8",
    "numba>=0.64.0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
]
